Fixed Experiences/Projects section overlap

--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,7 @@ body{
 .header__background {
     background-color: var(--colour-one);
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     /*display: flex;*/
     /*align-items: center;     /* Vertical centering */
     /*justify-content: center; /* Horizontal centering */
@@ -149,7 +149,7 @@ body{
 .about__background {
     background-color: var(--colour-two);
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     /*display: flex;*/
     /*align-items: center;     /* Vertical centering */
     /*justify-content: center; /* Horizontal centering */
@@ -211,7 +211,7 @@ body{
 .experience__background {
     background-color: var(--colour-two);
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     /*display: flex;*/
     /*align-items: center;     /* Vertical centering */
     /*justify-content: center; /* Horizontal centering */
